Analyze command is not reparseable

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • 45
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The analyze command runs an aggregation pipeline that is not reparseable. Specifically:

      • The $_internalConstructStats.sampleRate accumulator field does not re-parse.
      • The $merge into system.statistics.<collection> fails this assertion during re-parsing because $queryStats doesn't use an internal client.
      • This assertion (also for the $_internalConstructStats accumulator) fails during re-parsing because $queryStats doesn't use an internal client.

      Note that the analyze command is feature flag guarded so this is currently a test-only issue.

      We don't particularly care about getting query stats for the analyze command, so we will disable collecting query stats when the request is coming from an internal client (there are no other querying situations that we know of that will be excluded from doing this - it appears to be an infrequently used flag).

            Assignee:
            Alyssa Clark (Inactive)
            Reporter:
            Alyssa Clark (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: