SERVER-85374 Don't collect query stats for internal clients (#18219)

GitOrigin-RevId: dc9fda08a954d312138e8c776dbf2e4033a6b119